add for delete memory and add outoftime

--- a/WifiSocket/app/src/main/res/layout/activity_main.xml
+++ b/WifiSocket/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,12 @@
     android:orientation="vertical"
     android:background="@drawable/shape_no_corner_without_bottom"
     >
-
-    <Button
-        android:id="@+id/wifi"
-        style="@style/corner_all"
-        android:background="@drawable/shape_bottom_corner_no_top_line"
+    <LinearLayout
+        android:id="@+id/layout_wifilist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/wifi" />
+        android:orientation="vertical"
+        >
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -56,35 +54,35 @@
             android:textSize="@dimen/wifi_list_size"
             android:text="@string/wifi_list"/>
     </RelativeLayout>
-    <RelativeLayout
-        style="@style/corner_all"
-        android:id="@+id/conntect_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        >
-        <TextView
-            android:id="@+id/textview"
-            style="@style/corner_all"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/connect_wifi"
-            android:textSize="@dimen/wifi_list_text_top"
-            android:textColor="@color/black"
-            android:layout_centerHorizontal="true"
-            />
+    <!--<RelativeLayout-->
+        <!--style="@style/corner_all"-->
+        <!--android:id="@+id/conntect_layout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:visibility="visible"-->
+        <!--&gt;-->
+        <!--<TextView-->
+            <!--android:id="@+id/textview"-->
+            <!--style="@style/corner_all"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/connect_wifi"-->
+            <!--android:textSize="@dimen/wifi_list_text_top"-->
+            <!--android:textColor="@color/black"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--/>-->
 
-        <TextView
-            android:layout_below="@+id/textview"
-            android:textColor="@color/black"
-            android:textSize="@dimen/wifi_list_item_size"
-            style="@style/corner_all"
-            android:id="@+id/connected_wifi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="@string/app_name"/>
-    </RelativeLayout>
+        <!--<TextView-->
+            <!--android:layout_below="@+id/textview"-->
+            <!--android:textColor="@color/black"-->
+            <!--android:textSize="@dimen/wifi_list_item_size"-->
+            <!--style="@style/corner_all"-->
+            <!--android:id="@+id/connected_wifi"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:text="@string/app_name"/>-->
+    <!--</RelativeLayout>-->
     <RelativeLayout
         style="@style/corner_all"
         android:layout_marginTop="@dimen/wifi_list_size_top"
@@ -103,5 +101,112 @@
             style="@style/corner_all"
             />
     </RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_control"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical"
+        >
+        <LinearLayout
+            style="@style/corner_all"
+            android:layout_below="@+id/layout1"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:background="@drawable/shape_bottom_corner_no_top_line"
+                style="@style/corner_all"
+                android:id="@+id/button_connect"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/connect"
+                android:layout_weight="1"
+                android:textSize="@dimen/TextView_size"/>
+            <Button
+                android:background="@drawable/shape_bottom_corner_no_top_line"
+                style="@style/corner_all"
+                android:id="@+id/button_cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/cancel"
+                android:layout_weight="1"
+                android:textSize="@dimen/TextView_size"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            />
+        <LinearLayout
+            style="@style/corner_all"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                style="@style/corner_all"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                />
+            <Button
+                android:background="@drawable/shape_bottom_corner_no_top_line"
+                style="@style/corner_all"
+                android:id="@+id/up"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_height="wrap_content"
+                android:text="@string/up"/>
+            <Button
+                style="@style/corner_all"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+            <Button
+                android:background="@drawable/shape_bottom_corner_no_top_line"
+                style="@style/corner_all"
+                android:id="@+id/left"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_height="wrap_content"
+                android:text="@string/left"/>
+            <Button
+                android:background="@drawable/shape_bottom_corner_no_top_line"
+                style="@style/corner_all"
+                android:id="@+id/down"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_height="wrap_content"
+                android:text="@string/down"/>
+            <Button
+                android:background="@drawable/shape_bottom_corner_no_top_line"
+                style="@style/corner_all"
+                android:id="@+id/right"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_height="wrap_content"
+                android:text="@string/right"/>
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
