--- a/WifiSocket/app/src/main/res/layout/activity_main.xml
+++ b/WifiSocket/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    android:background="@mipmap/guide1"
+    android:background="@mipmap/background"
     >
     <LinearLayout
         android:id="@+id/layout_wifilist"
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:visibility="gone"
+        android:layout_marginTop="10dp"
         >
         <RelativeLayout
             android:layout_width="match_parent"
@@ -22,7 +23,7 @@
             android:orientation="horizontal"
             android:layout_gravity="center"
             style="@style/corner_all"
-            android:background="@drawable/shape_bottom_corner_no_top_line"
+            android:background="@mipmap/wifi_state"
             >
             <TextView
                 android:layout_width="wrap_content"
@@ -39,6 +40,7 @@
                 android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/btn_wifi_state_select"
                 android:checked="false"
                 />
         </RelativeLayout>
@@ -81,7 +83,7 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingTop="@dimen/activity_vertical_margin_TOP"
         android:orientation="vertical"
         >
         <LinearLayout
@@ -92,128 +94,89 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <Button
-                android:background="@drawable/item_selector"
-                style="@style/corner_all"
+                android:background="@drawable/btn_connect_socket_select"
                 android:id="@+id/button_connect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/connect"
                 android:layout_weight="1"
-                android:textSize="@dimen/TextView_size"/>
+                />
             <Button
-                android:background="@drawable/item_selector"
-                style="@style/corner_all"
+                android:background="@drawable/btn_cancel_socket_select"
                 android:id="@+id/button_cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/cancel"
                 android:layout_weight="1"
-                android:textSize="@dimen/TextView_size"/>
+                />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="20dp"
             />
-        <LinearLayout
-            style="@style/corner_all"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <Button
-                style="@style/corner_all"
-                android:layout_weight="1"
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="invisible"
+                android:layout_centerInParent="true"
+                android:background="@mipmap/robot_state"
                 />
-            <Button
-                android:background="@drawable/item_selector"
-                style="@style/corner_all"
-                android:id="@+id/up"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_height="wrap_content"
-                android:text="@string/up"/>
-            <Button
-                style="@style/corner_all"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"
-                />
-        </LinearLayout>
+        </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="10dp"
-            />
-        <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
             android:orientation="horizontal"
-            android:layout_height="wrap_content">
-            <Button
-                android:background="@drawable/item_selector"
-                style="@style/corner_all"
-                android:id="@+id/left"
-                android:layout_weight="1"
+            >
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_height="wrap_content"
-                android:text="@string/left"/>
-            <Button
-                style="@style/corner_all"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
+                >
+                <Button
+                    android:background="@drawable/btn_left_socket_select"
+                    android:layout_width="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_height="wrap_content"
+                    />
+            </RelativeLayout>
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:layout_height="wrap_content"
-                android:visibility="invisible"
-                />
-            <Button
-                style="@style/corner_all"
-                android:id="@+id/right"
                 android:layout_weight="1"
-                android:background="@drawable/item_selector"
+                android:orientation="vertical">
+                <Button
+                    android:background="@drawable/btn_up_socket_select"
+                    android:id="@+id/up"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    />
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="10dp"
+                    />
+                <Button
+                    android:background="@drawable/btn_down_socket_select"
+                    android:id="@+id/down"
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+            </LinearLayout>
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_height="wrap_content"
-                android:text="@string/right"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_height="wrap_content">
-            <Button
-                android:background="@drawable/item_selector"
-                style="@style/corner_all"
                 android:layout_weight="1"
-                android:visibility="invisible"
-                android:layout_width="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_height="wrap_content"
-                />
-            <Button
-                android:background="@drawable/item_selector"
-                style="@style/corner_all"
-                android:id="@+id/down"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_height="wrap_content"
-                android:text="@string/down"/>
-            <Button
-                style="@style/corner_all"
-                android:layout_weight="1"
-                android:background="@drawable/item_selector"
-                android:layout_width="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"
-                />
+                android:layout_height="match_parent">
+                <Button
+                    android:id="@+id/right"
+                    android:background="@drawable/btn_right_socket_select"
+                    android:layout_width="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_height="wrap_content"
+                    />
+            </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
-
-
 </LinearLayout>
