--- a/WifiSocket/app/src/main/res/layout/activity_main.xml
+++ b/WifiSocket/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="gone"
         android:layout_marginTop="10dp"
         >
         <RelativeLayout
@@ -23,7 +22,6 @@
             android:orientation="horizontal"
             android:layout_gravity="center"
             style="@style/corner_all"
-            android:background="@mipmap/wifi_state"
             >
             <TextView
                 android:layout_width="wrap_content"
@@ -40,7 +38,6 @@
                 android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_wifi_state_select"
                 android:checked="false"
                 />
         </RelativeLayout>
@@ -114,7 +111,9 @@
             />
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            >
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -135,6 +134,7 @@
                 android:layout_weight="1"
                 >
                 <Button
+                    android:id="@+id/left"
                     android:background="@drawable/btn_left_socket_select"
                     android:layout_width="wrap_content"
                     android:layout_centerInParent="true"
